fix bear btn z-index

--- a/jq_drag/css/index.css
+++ b/jq_drag/css/index.css
@@ -26,7 +26,7 @@
     width: 321px;
     height: 286px;
     position: absolute;
-    z-index: 23;
+    z-index: 22;
     bottom: 35px;
     left: 35px;
     cursor: pointer;
